feat: update color scheme and styles across various components

--- a/app/data/email/email-code.html
+++ b/app/data/email/email-code.html
@@ -7,11 +7,12 @@
     <meta name="supported-color-schemes" content="light" />
     <title>{{subject}}</title>
   </head>
+
   <body
     style="
       margin: 0;
       padding: 0;
-      background-color: #f4f4f5;
+      background-color: #f5f5f5;
       font-family:
         -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Roboto, &quot;Helvetica Neue&quot;,
         Arial, sans-serif;
@@ -23,7 +24,7 @@
       width="100%"
       cellpadding="0"
       cellspacing="0"
-      style="background-color: #f4f4f5"
+      style="background-color: #f5f5f5"
     >
       <tr>
         <td align="center" style="padding: 40px 16px">
@@ -42,11 +43,11 @@
                       style="
                         font-size: 24px;
                         font-weight: 700;
-                        color: #18181b;
+                        color: #171717;
                         letter-spacing: -0.5px;
                       "
                     >
-                      <span style="color: #8b5cf6">●</span> {{brandName}}
+                      <span style="color: #d946ef">●</span> {{brandName}}
                     </td>
                   </tr>
                 </table>
@@ -75,18 +76,18 @@
                           font-size: 22px;
                           font-weight: 600;
                           line-height: 1.3;
-                          color: #18181b;
+                          color: #171717;
                         "
                       >
                         {{title}}
                       </h1>
                       <p
-                        style="margin: 0 0 16px; font-size: 15px; line-height: 1.6; color: #52525b"
+                        style="margin: 0 0 16px; font-size: 15px; line-height: 1.6; color: #525252"
                       >
                         {{subtitle}}
                       </p>
                       <p
-                        style="margin: 0 0 24px; font-size: 14px; font-weight: 500; color: #71717a"
+                        style="margin: 0 0 24px; font-size: 14px; font-weight: 500; color: #737373"
                       >
                         {{codeLabel}}
                       </p>
@@ -98,8 +99,8 @@
                               cellpadding="0"
                               cellspacing="0"
                               style="
-                                background-color: #faf5ff;
-                                border: 2px solid #e9d5ff;
+                                background-color: #fdf4ff;
+                                border: 2px solid #f5d0fe;
                                 border-radius: 12px;
                               "
                             >
@@ -110,7 +111,7 @@
                                       font-size: 36px;
                                       font-weight: 700;
                                       letter-spacing: 8px;
-                                      color: #6d28d9;
+                                      color: #a21caf;
                                       font-family: &quot;Courier New&quot;, Courier, monospace;
                                     "
                                     >{{code}}</span
@@ -126,7 +127,7 @@
                           margin: 24px 0 0;
                           font-size: 14px;
                           line-height: 1.5;
-                          color: #71717a;
+                          color: #737373;
                           text-align: center;
                         "
                       >
@@ -142,14 +143,14 @@
                         cellpadding="0"
                         cellspacing="0"
                         style="
-                          background-color: #fefce8;
+                          background-color: #fffbeb;
                           border-radius: 8px;
-                          border-left: 4px solid #eab308;
+                          border-left: 4px solid #f59e0b;
                         "
                       >
                         <tr>
                           <td style="padding: 12px 16px">
-                            <p style="margin: 0; font-size: 13px; line-height: 1.5; color: #854d0e">
+                            <p style="margin: 0; font-size: 13px; line-height: 1.5; color: #78350f">
                               {{securityTip}}
                             </p>
                           </td>
@@ -167,7 +168,7 @@
                     margin: 0 0 8px;
                     font-size: 13px;
                     line-height: 1.5;
-                    color: #a1a1aa;
+                    color: #a3a3a3;
                     text-align: center;
                   "
                 >
@@ -178,7 +179,7 @@
                     margin: 0;
                     font-size: 12px;
                     line-height: 1.5;
-                    color: #d4d4d8;
+                    color: #d4d4d4;
                     text-align: center;
                   "
                 >
