--- a/app/data/email/email-code.html
+++ b/app/data/email/email-code.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="{{lang}}">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="color-scheme" content="light" />
-    <meta name="supported-color-schemes" content="light" />
-    <title>{{subject}}</title>
-  </head>
 
-  <body
-    style="
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="color-scheme" content="light" />
+  <meta name="supported-color-schemes" content="light" />
+  <title>{{subject}}</title>
+</head>
+
+<body style="
       margin: 0;
       padding: 0;
       background-color: #f5f5f5;
@@ -17,179 +17,133 @@
         -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Roboto, &quot;Helvetica Neue&quot;,
         Arial, sans-serif;
       -webkit-font-smoothing: antialiased;
-    "
-  >
-    <table
-      role="presentation"
-      width="100%"
-      cellpadding="0"
-      cellspacing="0"
-      style="background-color: #f5f5f5"
-    >
-      <tr>
-        <td align="center" style="padding: 40px 16px">
-          <table
-            role="presentation"
-            width="100%"
-            cellpadding="0"
-            cellspacing="0"
-            style="max-width: 480px"
-          >
-            <tr>
-              <td align="center" style="padding-bottom: 32px">
-                <table role="presentation" cellpadding="0" cellspacing="0">
-                  <tr>
-                    <td
-                      style="
+    ">
+  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #f5f5f5">
+    <tr>
+      <td align="center" style="padding: 40px 16px">
+        <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="max-width: 480px">
+          <tr>
+            <td align="center" style="padding-bottom: 32px">
+              <table role="presentation" cellpadding="0" cellspacing="0">
+                <tr>
+                  <td style="
                         font-size: 24px;
                         font-weight: 700;
                         color: #171717;
                         letter-spacing: -0.5px;
-                      "
-                    >
-                      <span style="color: #d946ef">●</span> {{brandName}}
-                    </td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <table
-                  role="presentation"
-                  width="100%"
-                  cellpadding="0"
-                  cellspacing="0"
-                  style="
+                      ">
+                    <span style="color: #dc2626">●</span> {{brandName}}
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="
                     background-color: #ffffff;
                     border-radius: 16px;
                     box-shadow:
                       0 1px 3px rgba(0, 0, 0, 0.08),
                       0 4px 12px rgba(0, 0, 0, 0.05);
-                  "
-                >
-                  <tr>
-                    <td style="padding: 40px 32px">
-                      <h1
-                        style="
+                  ">
+                <tr>
+                  <td style="padding: 40px 32px">
+                    <h1 style="
                           margin: 0 0 8px;
                           font-size: 22px;
                           font-weight: 600;
                           line-height: 1.3;
                           color: #171717;
-                        "
-                      >
-                        {{title}}
-                      </h1>
-                      <p
-                        style="margin: 0 0 16px; font-size: 15px; line-height: 1.6; color: #525252"
-                      >
-                        {{subtitle}}
-                      </p>
-                      <p
-                        style="margin: 0 0 24px; font-size: 14px; font-weight: 500; color: #737373"
-                      >
-                        {{codeLabel}}
-                      </p>
-                      <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
-                        <tr>
-                          <td align="center">
-                            <table
-                              role="presentation"
-                              cellpadding="0"
-                              cellspacing="0"
-                              style="
-                                background-color: #fdf4ff;
-                                border: 2px solid #f5d0fe;
+                        ">
+                      {{title}}
+                    </h1>
+                    <p style="margin: 0 0 16px; font-size: 15px; line-height: 1.6; color: #525252">
+                      {{subtitle}}
+                    </p>
+                    <p style="margin: 0 0 24px; font-size: 14px; font-weight: 500; color: #737373">
+                      {{codeLabel}}
+                    </p>
+                    <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
+                      <tr>
+                        <td align="center">
+                          <table role="presentation" cellpadding="0" cellspacing="0" style="
+                                background-color: #fef2f2;
+                                border: 2px solid #fecaca;
                                 border-radius: 12px;
-                              "
-                            >
-                              <tr>
-                                <td style="padding: 20px 32px">
-                                  <span
-                                    style="
+                              ">
+                            <tr>
+                              <td style="padding: 20px 32px">
+                                <span style="
                                       font-size: 36px;
                                       font-weight: 700;
                                       letter-spacing: 8px;
-                                      color: #a21caf;
+                                      color: #dc2626;
                                       font-family: &quot;Courier New&quot;, Courier, monospace;
-                                    "
-                                    >{{code}}</span
-                                  >
-                                </td>
-                              </tr>
-                            </table>
-                          </td>
-                        </tr>
-                      </table>
-                      <p
-                        style="
+                                    ">{{code}}</span>
+                              </td>
+                            </tr>
+                          </table>
+                        </td>
+                      </tr>
+                    </table>
+                    <p style="
                           margin: 24px 0 0;
                           font-size: 14px;
                           line-height: 1.5;
                           color: #737373;
                           text-align: center;
-                        "
-                      >
-                        {{expires}}
-                      </p>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td style="padding: 0 32px 32px">
-                      <table
-                        role="presentation"
-                        width="100%"
-                        cellpadding="0"
-                        cellspacing="0"
-                        style="
+                        ">
+                      {{expires}}
+                    </p>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="padding: 0 32px 32px">
+                    <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="
                           background-color: #fffbeb;
                           border-radius: 8px;
                           border-left: 4px solid #f59e0b;
-                        "
-                      >
-                        <tr>
-                          <td style="padding: 12px 16px">
-                            <p style="margin: 0; font-size: 13px; line-height: 1.5; color: #78350f">
-                              {{securityTip}}
-                            </p>
-                          </td>
-                        </tr>
-                      </table>
-                    </td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
-            <tr>
-              <td style="padding: 32px 16px 0">
-                <p
-                  style="
+                        ">
+                      <tr>
+                        <td style="padding: 12px 16px">
+                          <p style="margin: 0; font-size: 13px; line-height: 1.5; color: #78350f">
+                            {{securityTip}}
+                          </p>
+                        </td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+              </table>
+            </td>
+          </tr>
+          <tr>
+            <td style="padding: 32px 16px 0">
+              <p style="
                     margin: 0 0 8px;
                     font-size: 13px;
                     line-height: 1.5;
                     color: #a3a3a3;
                     text-align: center;
-                  "
-                >
-                  {{ignore}}
-                </p>
-                <p
-                  style="
+                  ">
+                {{ignore}}
+              </p>
+              <p style="
                     margin: 0;
                     font-size: 12px;
                     line-height: 1.5;
                     color: #d4d4d4;
                     text-align: center;
-                  "
-                >
-                  © {{footer}} · {{tagline}}
-                </p>
-              </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
-    </table>
-  </body>
+                  ">
+                © {{footer}} · {{tagline}}
+              </p>
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+  </table>
+</body>
+
 </html>
