--- a/app/data/email/email-code.html
+++ b/app/data/email/email-code.html
@@ -12,27 +12,33 @@
 <body style="
       margin: 0;
       padding: 0;
-      background-color: #f5f5f5;
+      background-color: #f3f4f6;
+      background-image: linear-gradient(135deg, #f9fafb 0%, #eef2ff 50%, #f3f4f6 100%);
       font-family:
         -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Roboto, &quot;Helvetica Neue&quot;,
         Arial, sans-serif;
       -webkit-font-smoothing: antialiased;
     ">
-  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #f5f5f5">
+  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #f3f4f6">
     <tr>
-      <td align="center" style="padding: 40px 16px">
-        <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="max-width: 480px">
+      <td align="center" style="padding: 48px 16px">
+        <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="max-width: 520px">
           <tr>
-            <td align="center" style="padding-bottom: 32px">
+            <td align="center" style="padding-bottom: 28px">
               <table role="presentation" cellpadding="0" cellspacing="0">
                 <tr>
                   <td style="
-                        font-size: 24px;
+                        font-size: 22px;
                         font-weight: 700;
-                        color: #171717;
-                        letter-spacing: -0.5px;
+                        color: #0f172a;
+                        letter-spacing: -0.4px;
                       ">
                     <span style="color: #dc2626">●</span> {{brandName}}
+                  </td>
+                </tr>
+                <tr>
+                  <td style="font-size: 13px; color: #6b7280; padding-top: 4px; text-align: center">
+                    {{tagline}}
                   </td>
                 </tr>
               </table>
@@ -42,43 +48,70 @@
             <td>
               <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="
                     background-color: #ffffff;
-                    border-radius: 16px;
+                    border-radius: 18px;
+                    border: 1px solid #e5e7eb;
                     box-shadow:
-                      0 1px 3px rgba(0, 0, 0, 0.08),
-                      0 4px 12px rgba(0, 0, 0, 0.05);
+                      0 10px 30px rgba(15, 23, 42, 0.08),
+                      0 2px 6px rgba(15, 23, 42, 0.05);
                   ">
                 <tr>
-                  <td style="padding: 40px 32px">
+                  <td style="padding: 0 32px">
+                    <table role="presentation" width="100%" cellpadding="0" cellspacing="0"
+                      style="border-collapse: collapse">
+                      <tr>
+                        <td style="height: 6px; border-radius: 999px; background-image: linear-gradient(90deg, #ef4444, #f97316, #fbbf24);
+                          text-indent: -9999px;">&nbsp;</td>
+                      </tr>
+                    </table>
+                  </td>
+                </tr>
+                <tr>
+                  <td style="padding: 36px 32px 32px">
+                    <p style="
+                          margin: 0 0 10px;
+                          display: inline-block;
+                          padding: 6px 12px;
+                          background-color: #fef2f2;
+                          color: #b91c1c;
+                          font-size: 12px;
+                          font-weight: 700;
+                          letter-spacing: 0.4px;
+                          text-transform: uppercase;
+                          border-radius: 999px;
+                        ">
+                      {{codeLabel}}
+                    </p>
                     <h1 style="
-                          margin: 0 0 8px;
-                          font-size: 22px;
-                          font-weight: 600;
-                          line-height: 1.3;
-                          color: #171717;
+                          margin: 0 0 10px;
+                          font-size: 24px;
+                          font-weight: 700;
+                          line-height: 1.35;
+                          color: #0f172a;
+                          letter-spacing: -0.2px;
                         ">
                       {{title}}
                     </h1>
-                    <p style="margin: 0 0 16px; font-size: 15px; line-height: 1.6; color: #525252">
+                    <p style="margin: 0 0 18px; font-size: 15px; line-height: 1.6; color: #475467">
                       {{subtitle}}
-                    </p>
-                    <p style="margin: 0 0 24px; font-size: 14px; font-weight: 500; color: #737373">
-                      {{codeLabel}}
                     </p>
                     <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
                       <tr>
                         <td align="center">
                           <table role="presentation" cellpadding="0" cellspacing="0" style="
-                                background-color: #fef2f2;
-                                border: 2px solid #fecaca;
-                                border-radius: 12px;
+                                background-color: #0f172a;
+                                border: 1px solid #e5e7eb;
+                                border-radius: 14px;
+                                overflow: hidden;
                               ">
                             <tr>
-                              <td style="padding: 20px 32px">
+                              <td
+                                style="padding: 22px 32px; background: linear-gradient(90deg, rgba(255,255,255,0.04), rgba(255,255,255,0.12));">
                                 <span style="
-                                      font-size: 36px;
-                                      font-weight: 700;
-                                      letter-spacing: 8px;
-                                      color: #dc2626;
+                                      display: inline-block;
+                                      font-size: 38px;
+                                      font-weight: 800;
+                                      letter-spacing: 10px;
+                                      color: #fef2f2;
                                       font-family: &quot;Courier New&quot;, Courier, monospace;
                                     ">{{code}}</span>
                               </td>
@@ -88,10 +121,10 @@
                       </tr>
                     </table>
                     <p style="
-                          margin: 24px 0 0;
+                          margin: 22px 0 0;
                           font-size: 14px;
                           line-height: 1.5;
-                          color: #737373;
+                          color: #6b7280;
                           text-align: center;
                         ">
                       {{expires}}
@@ -101,13 +134,13 @@
                 <tr>
                   <td style="padding: 0 32px 32px">
                     <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="
-                          background-color: #fffbeb;
-                          border-radius: 8px;
-                          border-left: 4px solid #f59e0b;
+                          background-color: #fff7ed;
+                          border-radius: 10px;
+                          border: 1px solid #fed7aa;
                         ">
                       <tr>
                         <td style="padding: 12px 16px">
-                          <p style="margin: 0; font-size: 13px; line-height: 1.5; color: #78350f">
+                          <p style="margin: 0; font-size: 13px; line-height: 1.6; color: #9a3412">
                             {{securityTip}}
                           </p>
                         </td>
@@ -124,7 +157,7 @@
                     margin: 0 0 8px;
                     font-size: 13px;
                     line-height: 1.5;
-                    color: #a3a3a3;
+                    color: #9ca3af;
                     text-align: center;
                   ">
                 {{ignore}}
@@ -133,7 +166,7 @@
                     margin: 0;
                     font-size: 12px;
                     line-height: 1.5;
-                    color: #d4d4d4;
+                    color: #cbd5e1;
                     text-align: center;
                   ">
                 © {{footer}} · {{tagline}}
