--- a/app/data/email/email-code.html
+++ b/app/data/email/email-code.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="{{lang}}">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="color-scheme" content="light" />
+    <meta name="supported-color-schemes" content="light" />
+    <title>{{subject}}</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="color-scheme" content="light" />
-  <meta name="supported-color-schemes" content="light" />
-  <title>{{subject}}</title>
-</head>
-
-<body style="
+  <body
+    style="
       margin: 0;
       padding: 0;
       background-color: #f3f4f6;
@@ -18,56 +18,93 @@
         -apple-system, BlinkMacSystemFont, &quot;Segoe UI&quot;, Roboto, &quot;Helvetica Neue&quot;,
         Arial, sans-serif;
       -webkit-font-smoothing: antialiased;
-    ">
-  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #f3f4f6">
-    <tr>
-      <td align="center" style="padding: 48px 16px">
-        <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="max-width: 520px">
-          <tr>
-            <td align="center" style="padding-bottom: 28px">
-              <table role="presentation" cellpadding="0" cellspacing="0">
-                <tr>
-                  <td style="
+    "
+  >
+    <table
+      role="presentation"
+      width="100%"
+      cellpadding="0"
+      cellspacing="0"
+      style="background-color: #f3f4f6"
+    >
+      <tr>
+        <td align="center" style="padding: 48px 16px">
+          <table
+            role="presentation"
+            width="100%"
+            cellpadding="0"
+            cellspacing="0"
+            style="max-width: 520px"
+          >
+            <tr>
+              <td align="center" style="padding-bottom: 28px">
+                <table role="presentation" cellpadding="0" cellspacing="0">
+                  <tr>
+                    <td
+                      style="
                         font-size: 22px;
                         font-weight: 700;
                         color: #0f172a;
                         letter-spacing: -0.4px;
-                      ">
-                    <span style="color: #dc2626">●</span> {{brandName}}
-                  </td>
-                </tr>
-                <tr>
-                  <td style="font-size: 13px; color: #6b7280; padding-top: 4px; text-align: center">
-                    {{tagline}}
-                  </td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="
+                      "
+                    >
+                      <span style="color: #dc2626">●</span> {{brandName}}
+                    </td>
+                  </tr>
+                  <tr>
+                    <td
+                      style="font-size: 13px; color: #6b7280; padding-top: 4px; text-align: center"
+                    >
+                      {{tagline}}
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <table
+                  role="presentation"
+                  width="100%"
+                  cellpadding="0"
+                  cellspacing="0"
+                  style="
                     background-color: #ffffff;
                     border-radius: 18px;
                     border: 1px solid #e5e7eb;
                     box-shadow:
                       0 10px 30px rgba(15, 23, 42, 0.08),
                       0 2px 6px rgba(15, 23, 42, 0.05);
-                  ">
-                <tr>
-                  <td style="padding: 0 32px">
-                    <table role="presentation" width="100%" cellpadding="0" cellspacing="0"
-                      style="border-collapse: collapse">
-                      <tr>
-                        <td style="height: 6px; border-radius: 999px; background-image: linear-gradient(90deg, #ef4444, #f97316, #fbbf24);
-                          text-indent: -9999px;">&nbsp;</td>
-                      </tr>
-                    </table>
-                  </td>
-                </tr>
-                <tr>
-                  <td style="padding: 36px 32px 32px">
-                    <p style="
+                  "
+                >
+                  <tr>
+                    <td style="padding: 0 32px">
+                      <table
+                        role="presentation"
+                        width="100%"
+                        cellpadding="0"
+                        cellspacing="0"
+                        style="border-collapse: collapse"
+                      >
+                        <tr>
+                          <td
+                            style="
+                              height: 6px;
+                              border-radius: 999px;
+                              background-image: linear-gradient(90deg, #ef4444, #f97316, #fbbf24);
+                              text-indent: -9999px;
+                            "
+                          >
+                            &nbsp;
+                          </td>
+                        </tr>
+                      </table>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td style="padding: 36px 32px 32px">
+                      <p
+                        style="
                           margin: 0 0 10px;
                           display: inline-block;
                           padding: 6px 12px;
@@ -78,105 +115,137 @@
                           letter-spacing: 0.4px;
                           text-transform: uppercase;
                           border-radius: 999px;
-                        ">
-                      {{codeLabel}}
-                    </p>
-                    <h1 style="
+                        "
+                      >
+                        {{codeLabel}}
+                      </p>
+                      <h1
+                        style="
                           margin: 0 0 10px;
                           font-size: 24px;
                           font-weight: 700;
                           line-height: 1.35;
                           color: #0f172a;
                           letter-spacing: -0.2px;
-                        ">
-                      {{title}}
-                    </h1>
-                    <p style="margin: 0 0 18px; font-size: 15px; line-height: 1.6; color: #475467">
-                      {{subtitle}}
-                    </p>
-                    <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
-                      <tr>
-                        <td align="center">
-                          <table role="presentation" cellpadding="0" cellspacing="0" style="
+                        "
+                      >
+                        {{title}}
+                      </h1>
+                      <p
+                        style="margin: 0 0 18px; font-size: 15px; line-height: 1.6; color: #475467"
+                      >
+                        {{subtitle}}
+                      </p>
+                      <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
+                        <tr>
+                          <td align="center">
+                            <table
+                              role="presentation"
+                              cellpadding="0"
+                              cellspacing="0"
+                              style="
                                 background-color: #0f172a;
                                 border: 1px solid #e5e7eb;
                                 border-radius: 14px;
                                 overflow: hidden;
-                              ">
-                            <tr>
-                              <td
-                                style="padding: 22px 32px; background: linear-gradient(90deg, rgba(255,255,255,0.04), rgba(255,255,255,0.12));">
-                                <span style="
+                              "
+                            >
+                              <tr>
+                                <td
+                                  style="
+                                    padding: 22px 32px;
+                                    background: linear-gradient(
+                                      90deg,
+                                      rgba(255, 255, 255, 0.04),
+                                      rgba(255, 255, 255, 0.12)
+                                    );
+                                  "
+                                >
+                                  <span
+                                    style="
                                       display: inline-block;
                                       font-size: 38px;
                                       font-weight: 800;
                                       letter-spacing: 10px;
                                       color: #fef2f2;
                                       font-family: &quot;Courier New&quot;, Courier, monospace;
-                                    ">{{code}}</span>
-                              </td>
-                            </tr>
-                          </table>
-                        </td>
-                      </tr>
-                    </table>
-                    <p style="
+                                    "
+                                    >{{code}}</span
+                                  >
+                                </td>
+                              </tr>
+                            </table>
+                          </td>
+                        </tr>
+                      </table>
+                      <p
+                        style="
                           margin: 22px 0 0;
                           font-size: 14px;
                           line-height: 1.5;
                           color: #6b7280;
                           text-align: center;
-                        ">
-                      {{expires}}
-                    </p>
-                  </td>
-                </tr>
-                <tr>
-                  <td style="padding: 0 32px 32px">
-                    <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="
+                        "
+                      >
+                        {{expires}}
+                      </p>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td style="padding: 0 32px 32px">
+                      <table
+                        role="presentation"
+                        width="100%"
+                        cellpadding="0"
+                        cellspacing="0"
+                        style="
                           background-color: #fff7ed;
                           border-radius: 10px;
                           border: 1px solid #fed7aa;
-                        ">
-                      <tr>
-                        <td style="padding: 12px 16px">
-                          <p style="margin: 0; font-size: 13px; line-height: 1.6; color: #9a3412">
-                            {{securityTip}}
-                          </p>
-                        </td>
-                      </tr>
-                    </table>
-                  </td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-          <tr>
-            <td style="padding: 32px 16px 0">
-              <p style="
+                        "
+                      >
+                        <tr>
+                          <td style="padding: 12px 16px">
+                            <p style="margin: 0; font-size: 13px; line-height: 1.6; color: #9a3412">
+                              {{securityTip}}
+                            </p>
+                          </td>
+                        </tr>
+                      </table>
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
+            <tr>
+              <td style="padding: 32px 16px 0">
+                <p
+                  style="
                     margin: 0 0 8px;
                     font-size: 13px;
                     line-height: 1.5;
                     color: #9ca3af;
                     text-align: center;
-                  ">
-                {{ignore}}
-              </p>
-              <p style="
+                  "
+                >
+                  {{ignore}}
+                </p>
+                <p
+                  style="
                     margin: 0;
                     font-size: 12px;
                     line-height: 1.5;
                     color: #cbd5e1;
                     text-align: center;
-                  ">
-                © {{footer}} · {{tagline}}
-              </p>
-            </td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
-</body>
-
+                  "
+                >
+                  © {{footer}} · {{tagline}}
+                </p>
+              </td>
+            </tr>
+          </table>
+        </td>
+      </tr>
+    </table>
+  </body>
 </html>
