chore: update dependencies and improve PostCSS configuration for production

--- a/app/data/email/email-code.html
+++ b/app/data/email/email-code.html
@@ -137,7 +137,10 @@
                                       font-weight: 700;
                                       letter-spacing: 8px;
                                       color: #ffffff;
-                                      font-family: &quot;SF Mono&quot;, &quot;Monaco&quot;, &quot;Inconsolata&quot;, &quot;Roboto Mono&quot;, &quot;Courier New&quot;, Courier, monospace;
+                                      font-family:
+                                        &quot;SF Mono&quot;, &quot;Monaco&quot;,
+                                        &quot;Inconsolata&quot;, &quot;Roboto Mono&quot;,
+                                        &quot;Courier New&quot;, Courier, monospace;
                                       line-height: 1;
                                     "
                                     >{{formattedCode}}</span
