--- a/app/data/email/email-code.html
+++ b/app/data/email/email-code.html
@@ -122,14 +122,15 @@
                               cellpadding="0"
                               cellspacing="0"
                               style="
-                                background: linear-gradient(135deg, #dc2626 0%, #f43f5e 100%);
+                                background-color: #dc2626;
+                                background-image: linear-gradient(135deg, #dc2626 0%, #f43f5e 100%);
                                 border-radius: 12px;
                                 overflow: hidden;
                                 box-shadow: 0 4px 12px rgba(220, 38, 38, 0.3);
                               "
                             >
                               <tr>
-                                <td style="padding: 28px 40px">
+                                <td style="padding: 28px 40px; background-color: #dc2626">
                                   <span
                                     style="
                                       display: inline-block;
